 8. Reduce margins in sleep dialog, to allow more space for text.
 9. Add option to show menu icons or not.
10. Add more server information to "Information" dialog.
11. Only update rating upon click.
12. Show time in tooltip when hover over progressbar (desktop browsers only).
13. Double-click now-playing image to show zoomed image.

0.8.3
-----
1. Fix parsing of queue items' durations - and showing of total duration.
2. Fix elliding of toolbar text.
3. Fix zoomed image sizes when viewing artist pictures.

0.8.2
-----
 1. If queue page contains all tracks, then iterate these to determine total
    duration.
 2. When getting track lists (for albums, or queue) only request rating if
    rating support is enabled (via TrackStat).
 3. When drawing letter overlay, need to reduce item height for position
    calculation by 20px if there is no sub-text.
 4. Fix error message, and list update, when toggling server categories on/off.
 5. Remove "SimpleLibraryViews " prefix from library names.
 6. Use "All" as name for default library.
 7. When auto-selecting a player at start-up (1st time, or no config) then
    choose in order of preference: first powered on standard player, or first
    powered off standard player, first powered on group, first powered off
    group.
 8. Ensure all menus have scrollbars, if they are too tall.
 9. Long press on now-playing nav-button (whilst showing now-playing) shows
    track info. (Mobile only)
10. Long press on queue nav-button (whilst showing queue) scrolls to current
    track. (Mobile only)
11. Make confirmation dialogs persistent - need to press button to close.

0.8.1
-----
 1. Lazy-load now-playing images.
 2. Set lazy-load error image to default cover.
 3. Always use lazy-load images, as can set error image easily.
 4. Set correct mouse-pointer for jumplist.
 5. Default to using mysqueezebox to resize remote images.
 6. If config does not have useLocalImageproxy, then default to mysqueezebox.