@@ -15,6 +15,8 @@
 11. Only update rating upon click.
 12. Show time in tooltip when hover over progressbar (desktop browsers only).
 13. Double-click now-playing image to show zoomed image.
+14. Show now-playing image context menu on single click. Mobile browses only, as
+    its an iOS work-around.
 
 0.8.3
 -----
